# agrishore

./: README.md  data_loading.py  data_prep.py  pyproject.toml
Dashboard/: app.py  config.py
Dashboard/assets/: styles.css
Dashboard/components/: __init__.py  callback.py  graphs.py  layout.py
Dashboard/data/: database.py
Dashboard/utils/: __init__.py  constants.py  data_processing.py
Data/: FAOSTAT_data_en_5-22-2025.csv  FAOSTAT_data_en_5-22-2025_Processed.csv
Data/Value_of_Production_E_All_Data/: Value_of_Production_E_ItemCodes.csv
Trade_DetailedTradeMatrix_E_All_Data/: Trade_DetailedTradeMatrix_E_ItemCodes.csv
