[project]
name = "agrishore"
version = "0.1.0"
description = ""
authors = [
    {name = "Vivek Patidar",email = "77988917+ImJericho@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "dash (>=3.0.4,<4.0.0)",
    "dash-bootstrap-components (>=2.0.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
